--- a/aoc-2023.fsproj
+++ b/aoc-2023.fsproj
@@ -10,9 +10,11 @@
     <ItemGroup>
         <Content Include="Input\input01" />
         <Content Include="Input\input02" />
+        <Content Include="Input\input03" />
         <Compile Include="Utility.fs" />
         <Compile Include="Day01.fs" />
         <Compile Include="Day02.fs" />
+        <Compile Include="Day03.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
