--- a/aoc-2023.fsproj
+++ b/aoc-2023.fsproj
@@ -12,11 +12,13 @@
         <Content Include="Input\input02" />
         <Content Include="Input\input03" />
         <Content Include="Input\input04" />
+        <Content Include="Input\input05" />
         <Compile Include="Utility.fs" />
         <Compile Include="Day01.fs" />
         <Compile Include="Day02.fs" />
         <Compile Include="Day03.fs" />
         <Compile Include="Day04.fs" />
+        <Compile Include="Day05.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
