--- a/aoc-2023.fsproj
+++ b/aoc-2023.fsproj
@@ -15,6 +15,7 @@
         <Content Include="Input\input04" />
         <Content Include="Input\input05" />
         <Content Include="Input\input06" />
+        <Content Include="Input\input07" />
         <Compile Include="Utility.fs" />
         <Compile Include="Day01.fs" />
         <Compile Include="Day02.fs" />
