--- a/aoc-2023.fsproj
+++ b/aoc-2023.fsproj
@@ -18,6 +18,7 @@
         <Content Include="Input\input07" />
         <Content Include="Input\input08" />
         <Content Include="Input\input09" />
+        <Content Include="Input\input10" />
         <Compile Include="Utility.fs" />
         <Compile Include="Day01.fs" />
         <Compile Include="Day02.fs" />
@@ -28,6 +29,7 @@
         <Compile Include="Day07.fs" />
         <Compile Include="Day08.fs" />
         <Compile Include="Day09.fs" />
+        <Compile Include="Day10.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
