--- a/aoc-2023.fsproj
+++ b/aoc-2023.fsproj
@@ -19,6 +19,7 @@
         <Content Include="Input\input08" />
         <Content Include="Input\input09" />
         <Content Include="Input\input10" />
+        <Content Include="Input\input11" />
         <Compile Include="Utility.fs" />
         <Compile Include="Day01.fs" />
         <Compile Include="Day02.fs" />
@@ -30,6 +31,7 @@
         <Compile Include="Day08.fs" />
         <Compile Include="Day09.fs" />
         <Compile Include="Day10.fs" />
+        <Compile Include="Day11.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
