--- a/aoc-2023.fsproj
+++ b/aoc-2023.fsproj
@@ -20,6 +20,7 @@
         <Content Include="Input\input09" />
         <Content Include="Input\input10" />
         <Content Include="Input\input11" />
+        <Content Include="Input\input12" />
         <Compile Include="Utility.fs" />
         <Compile Include="Day01.fs" />
         <Compile Include="Day02.fs" />
@@ -32,6 +33,7 @@
         <Compile Include="Day09.fs" />
         <Compile Include="Day10.fs" />
         <Compile Include="Day11.fs" />
+        <Compile Include="Day12.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
