--- a/aoc-2023.fsproj
+++ b/aoc-2023.fsproj
@@ -22,6 +22,7 @@
         <Content Include="Input\input11" />
         <Content Include="Input\input12" />
         <Content Include="Input\input13" />
+        <Content Include="Input\input14" />
         <Compile Include="Utility.fs" />
         <Compile Include="Day01.fs" />
         <Compile Include="Day02.fs" />
@@ -36,6 +37,7 @@
         <Compile Include="Day11.fs" />
         <Compile Include="Day12.fs" />
         <Compile Include="Day13.fs" />
+        <Compile Include="Day14.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
