--- a/aoc-2023.fsproj
+++ b/aoc-2023.fsproj
@@ -5,7 +5,7 @@
         <RootNamespace>aoc_2023</RootNamespace>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <OutputType>Exe</OutputType>
-        <LangVersion>latestmajor</LangVersion>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -24,7 +24,9 @@
         <Content Include="Input\input13" />
         <Content Include="Input\input14" />
         <Content Include="Input\input15" />
+        <Content Include="Input\input16" />
         <Compile Include="Utility.fs" />
+        <Compile Include="ArrayAoc2D.fs" />
         <Compile Include="Day01.fs" />
         <Compile Include="Day02.fs" />
         <Compile Include="Day03.fs" />
@@ -40,6 +42,7 @@
         <Compile Include="Day13.fs" />
         <Compile Include="Day14.fs" />
         <Compile Include="Day15.fs" />
+        <Compile Include="Day16.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
