--- a/aoc-2023.fsproj
+++ b/aoc-2023.fsproj
@@ -29,6 +29,8 @@
         <Content Include="Input\input18" />
         <Content Include="Input\input19" />
         <Content Include="Input\input20" />
+        <Content Include="Input\input21" />
+        <Content Include="Input\input22" />
         <Compile Include="Utility.fs" />
         <Compile Include="ArrayAoc2D.fs" />
         <Compile Include="Interval.fs" />
@@ -52,6 +54,7 @@
         <Compile Include="Day18.fs" />
         <Compile Include="Day19.fs" />
         <Compile Include="Day20.fs" />
+        <Compile Include="Day21.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
