23a ok, b too slow

--- a/aoc-2023.fsproj
+++ b/aoc-2023.fsproj
@@ -31,6 +31,7 @@
         <Content Include="Input\input20" />
         <Content Include="Input\input21" />
         <Content Include="Input\input22" />
+        <Content Include="Input\input23" />
         <Compile Include="Utility.fs" />
         <Compile Include="ArrayAoc2D.fs" />
         <Compile Include="Interval.fs" />
@@ -56,6 +57,7 @@
         <Compile Include="Day20.fs" />
         <Compile Include="Day21.fs" />
         <Compile Include="Day22.fs" />
+        <Compile Include="Day23.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
