--- a/aoc-2023.fsproj
+++ b/aoc-2023.fsproj
@@ -33,6 +33,7 @@
         <Content Include="Input\input22" />
         <Content Include="Input\input23" />
         <Content Include="Input\input24" />
+        <Content Include="Input\input25" />
         <Compile Include="Utility.fs" />
         <Compile Include="ArrayAoc2D.fs" />
         <Compile Include="Interval.fs" />
@@ -60,6 +61,7 @@
         <Compile Include="Day22.fs" />
         <Compile Include="Day23.fs" />
         <Compile Include="Day24.fs" />
+        <Compile Include="Day25.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
